Update project to JDK 25 (#24)